# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.659 2006/07/13 14:22:52 wolf31o2 Exp $

  13 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  Updated the installer script to allow specifying the front-end to run from
  the command line. Currently, it only supports dialog and gtk. It still needs
  some testing, however.

  9 July 2006; Preston Cody <codeman@gentoo.org>
  src/GLIGenDialog.py:
  make lilo only show up for x86 if non-networkless

  25 Jun 2006; Preston Cody <codeman@gentoo.org>
  src/GLIGenDialog.py:
  adding code to auto-add doscsi if a scsi drive detected.
  this code is also in the gtkfe already

  24 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  pass proper PORTAGE_TMPDIR

  17 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  fix list_mirrors() to ignore <uri> lines that don't end on the same line

  17 Jun 2006; Preston Cody <codeman@gentoo.org> :
  Added code to the mta step in AT to parse the install packages list and
  look for mtas and if it finds it emerge it.
  Initial attempt at moving extra_packages early in the setup to only show
  local USE flags relating to those packages.
  .. abandoned local USE project.  no right way to do it.

  9 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  minor tweak to regex for parsing mirrors.xml

  23 May 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  make use of strict_start and strict_end in partition recreation

  15 May 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  add strict_start and strict_end parameters to _add_partition()
  add _find_current_minor_for_part() function to help with resizing
  fix logical/extended logic in _partition_delete_step()