@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.659 2006/07/13 14:22:52 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.660 2006/07/17 18:18:27 agaffney Exp $
+
+  17 Jul 2006; Andrew Gaffney <agaffney@gentoo.org>:
+  src/GLIClientController.py:
+  log version-stamp
 
   13 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
   Updated the installer script to allow specifying the front-end to run from
